--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         canvas {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            /* object-fit: contain; */
         }
 
         .fab>i {
@@ -62,7 +62,23 @@
         }
 
         .fab-item.toggled {
-            transform: translateY(-5rem);
+            transform: translateY(calc(-5rem * var(--i)));
+        }
+
+        #btn-fullscreen {
+            background-color: rgb(92, 92, 92);
+        }
+
+        #btn-fullscreen:hover {
+            background-color: rgb(141, 141, 141);
+        }
+
+        #btn-import {
+            background-color: rgb(3, 122, 33);
+        }
+
+        #btn-import:hover {
+            background-color: rgb(6, 185, 15);
         }
 
         .fab-item {
@@ -81,8 +97,11 @@
         <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
     </div>
 
-    <div id="btn-fullscreen" class="fab fab-item">
+    <div style="--i:1" id="btn-fullscreen" class="fab fab-item">
         <i class='bx bx-fullscreen'></i>
+    </div>
+    <div style="--i:2" id="btn-import" class="fab fab-item">
+        <i class='bx bxs-file-import'></i>
     </div>
     <div id="fab" class="fab">
         <i class='bx bx-chevron-down'></i>
@@ -92,6 +111,10 @@
         function resizefunc() {
             Module.ccall('Resize', 'void', ['number', 'number'], [window.innerWidth, window.innerHeight]);
         }
+
+        window.addEventListener('beforeunload', function (e) {
+            Module.ccall('Unload');
+        }, false);
 
         const canvas = document.getElementById('canvas');
         window.addEventListener('resize', (event) => {
@@ -138,9 +161,39 @@
             toggleActionButton();
         });
 
+        const btn_import = document.getElementById("btn-import")
+        btn_import.addEventListener('click', () => {
+            let input = document.createElement('input');
+            input.type = 'file';
+
+            // input.accept = '.apng, .avif, .bmp, .gif, .ico, .jfif, .jpe, .jpeg, .jpg, .png, .svg, .tif, .tiff, .webp';
+            input.onchange = function (e) {
+                var file = e.target.files[0];
+                var reader = new FileReader();
+                reader.readAsArrayBuffer(file);
+                reader.onload = function () {
+                    var arrayBuffer = reader.result;
+                    var uint8View = new Uint8Array(arrayBuffer);
+
+                    let filename = file.name || "file";
+                    let p = prompt("File will be saved as " + filename + ". type to overwrite it.")
+                    filename = p || filename;
+
+                    FS.writeFile('/app/' + filename, uint8View);
+                    FS.syncfs(false, function (err) {
+                        console.log('file /app/' + filename + " can be loaded");
+                        assert(!err);
+                    });
+                }
+            };
+            input.click();
+
+            toggleActionButton();
+        });
+
     </script>
 
-    <script async type="text/javascript" src="sowa.js"></script>
+    <script async type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
